# AMNLT_original_models

./: README.md  pyproject.toml
AMNLT/configs/smt_dan_config/: ExperimentConfig.py
AMNLT/configs/smt_dan_config/Einsiedeln/: Einsiedeln.json
AMNLT/configs/smt_dan_config/GregoSynth/: GregoSynth.json  GregoSynth_muaw.json
AMNLT/configs/smt_dan_config/Salzinnes/: Salzinnes.json
AMNLT/configs/smt_dan_config/Solesmes/: Solesmes.json  Solesmes_muaw.json
AMNLT/models/dan_smt_model/: configuration_smt.py  modeling_dan.py
AMNLT/models/dc_base_unfolding_trocr_models/: model.py  modules.py
AMNLT/models/paligemma/: train_model.py
AMNLT/scripts/: compute_amnlt_metrics.py
AMNLT/scripts/dc_base_unfolding_trocr/: test.py  train.py
AMNLT/scripts/origaminet/: get_predictions.py  train.py
AMNLT/scripts/smt_dan/: dan_trainer.py  data_amnlt.py  eval_functions.py  smt_trainer.py  test_dan.py  test_smt.py  train_dan.py  train_smt.py
AMNLT/scripts/trocr/: test_trocr.py  train_trocr.py
AMNLT/utils/dc_base_unfolding_utils/: augmentations.py  data_preprocessing.py  dataset.py
